--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -1,8 +1,9 @@
 name: Nightly
 
 on:
+  workflow_dispatch:
   push:
-    branches: [ main ]
+    branches: [ mu2 ]
     paths:
     - 'src/**'
     - 'scripts/**'
@@ -27,7 +28,6 @@ jobs:
         npm i -g asar
         bash scripts/injectPolyfills.sh
         sed -i -e "s/nightly/nightly-$(git rev-parse HEAD | cut -c 1-7)/" src/index.js
-        node scripts/strip.js
         npx asar pack src app.asar
 
     - name: Upload artifact
@@ -38,77 +38,77 @@ jobs:
         retention-days: 1
 
 
-  test-linux:
-    name: Test Linux
+#  test-linux:
+#    name: Test Linux
   
-    needs: build
-    runs-on: ubuntu-latest
+#    needs: build
+#    runs-on: ubuntu-latest
   
-    steps:
-    - uses: actions/checkout@v2
+#    steps:
+#    - uses: actions/checkout@v2
 
-    - name: Retrieve artifact
-      uses: actions/download-artifact@v2
-      with:
-        name: built-asar
-        path: artifact
+#    - name: Retrieve artifact
+#      uses: actions/download-artifact@v2
+#      with:
+#        name: built-asar
+#        path: artifact
     
-    - name: Extract artifact
-      run: |
-        cp artifact/app.asar .
+#    - name: Extract artifact
+#      run: |
+#        cp artifact/app.asar .
 
-    - name: Download Client with OpenAsar
-      run: |
-        wget "https://discord.com/api/download/canary?platform=linux&format=tar.gz" -O discord.tar.gz
-        tar xf discord.tar.gz
-        cp app.asar DiscordCanary/resources/app.asar
+#    - name: Download Client with OpenAsar
+#      run: |
+#        wget "https://discord.com/api/download/canary?platform=linux&format=tar.gz" -O discord.tar.gz
+#        tar xf discord.tar.gz
+#        cp app.asar DiscordCanary/resources/app.asar
 
-    - name: Check if Discord will startup
-      run: |
-        coproc { xvfb-run -e /dev/stdout ./DiscordCanary/DiscordCanary --enable-logging; }
-        grep -m1 "Finished discord_rpc" <&${COPROC[0]}
-        sleep 1
-        [[ $COPROC_PID ]] && kill $COPROC_PID
-      timeout-minutes: 3
+#    - name: Check if Discord will startup
+#      run: |
+#        coproc { xvfb-run -e /dev/stdout ./DiscordCanary/DiscordCanary --enable-logging; }
+#        grep -m1 "Finished discord_rpc" <&${COPROC[0]}
+#        sleep 1
+#        [[ $COPROC_PID ]] && kill $COPROC_PID
+#      timeout-minutes: 3
 
-  test-win:
-    name: Test Windows
+#  test-win:
+#    name: Test Windows
   
-    needs: build
-    runs-on: windows-latest
+#    needs: build
+#    runs-on: windows-latest
   
-    steps:
-    - uses: actions/checkout@v2
+#    steps:
+#    - uses: actions/checkout@v2
 
-    - name: Setup Node.js v16.x
-      uses: actions/setup-node@v2
-      with:
-        node-version: 16.x
+#    - name: Setup Node.js v16.x
+#      uses: actions/setup-node@v2
+#      with:
+#        node-version: 16.x
 
-    - name: Retrieve artifact
-      uses: actions/download-artifact@v2
-      with:
-        name: built-asar
-        path: artifact
+#    - name: Retrieve artifact
+#      uses: actions/download-artifact@v2
+#      with:
+#        name: built-asar
+#        path: artifact
 
-    - name: Extract artifact
-      run: |
-        cp artifact/app.asar .
+#    - name: Extract artifact
+#      run: |
+#        cp artifact/app.asar .
 
-    - name: Setup Client
-      shell: bash
-      run: |
-        node scripts/downloadWin.js
-        tar xf client.tar
+#    - name: Setup Client
+#      shell: bash
+#      run: |
+#        node scripts/downloadWin.js
+#        tar xf client.tar
 
-        # Install OpenAsar build and setup environment
-        sed -r -i "s/const config=require\('.\/config'\);/console.log\('ABRA'\);app.quit\(\);  /" app.asar
-        sed -r -i "s/if\(next!=cur&&!options\?\.allowObsoleteHost\)/if\(false\)                                 /" app.asar
-        cp -f app.asar files/resources/app.asar
-        mkdir discord
-        cp -rf files/ discord/app-1.0.0
-        cd discord/app-1.0.0
-        mkdir modules
+#        # Install OpenAsar build and setup environment
+#        sed -r -i "s/const config=require\('.\/config'\);/console.log\('ABRA'\);app.quit\(\);  /" app.asar
+#        sed -r -i "s/if\(next!=cur&&!options\?\.allowObsoleteHost\)/if\(false\)                                 /" app.asar
+#        cp -f app.asar files/resources/app.asar
+#        mkdir discord
+#        cp -rf files/ discord/app-1.0.0
+#        cd discord/app-1.0.0
+#        mkdir modules
 
 #    - name: Upload artifact
 #      uses: actions/upload-artifact@v2
@@ -117,19 +117,18 @@ jobs:
 #        path: app.asar
 #        retention-days: 1
 
-    - name: Check if Discord will startup
-      run: |
-        cd discord/app-1.0.0
-        ./DiscordCanary.exe | grep -m1 "ABRA"
-      timeout-minutes: 3
-      shell: bash
+#    - name: Check if Discord will startup
+#      run: |
+#        cd discord/app-1.0.0
+#        ./DiscordCanary.exe | grep -m1 "ABRA"
+#      timeout-minutes: 3
+#      shell: bash
 
 
   release:
     name: Release
     needs:
-      - test-linux
-      - test-win
+      - build
     runs-on: ubuntu-latest
 
     steps:
